@@ -7,6 +7,11 @@ apport (0.104) UNRELEASED; urgency=low
     reports where we do not have a PID, since having the local information is
     interesting and important (and acceptable in terms of personal
     information).
+  * apport/report.py: Split out method add_proc_environ() for getting
+    ProcEnviron, so that we can call it separately.
+  * apport/ui.py, run_report_bug(): Add ProcEnviron if we do not have a pid to
+    file a bug against. This way, bugs filed against packages or distro also
+    get locale information. (LP: #198514)
 
   [ Kees Cook ]
   * apport/report.py: fix module license checking logic (LP: #199927).
@@ -15,7 +20,7 @@ apport (0.104) UNRELEASED; urgency=low
     - test_module_license_evaluation: check modinfo reporting.
   * problem_report.py: Skip atime test case if file system is mounted noatime.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Mar 2008 11:47:53 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Mar 2008 11:55:28 +0100
 
 apport (0.103) hardy; urgency=low
 
